--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -7,7 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="http://maps.googleapis.com/maps/api/js"></script>
+  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAq-mVnomSniF9JD8mhxLLbsyZ8EXB0hjg"></script>
 </head>
 <body>
   <app-root></app-root>
